<?php

use Illuminate\Database\Migrations\Migration;
use Illuminate\Database\Schema\Blueprint;
use Illuminate\Support\Facades\Schema;

return new class extends Migration
{
    /**
     * Run the migrations.
     */
    public function up(): void
    {
        Schema::table('posts', function (Blueprint $table) {
            $table->index('category');
            $table->index('department');
        });

        Schema::table('profiles', function (Blueprint $table) {
            $table->index('department');
            $table->index('graduation_year');
            $table->index('company');
        });
    }

    /**
     * Reverse the migrations.
     */
    public function down(): void
    {
        Schema::table('posts', function (Blueprint $table) {
            $table->dropIndex(['category']);
            $table->dropIndex(['department']);
        });

        Schema::table('profiles', function (Blueprint $table) {
            $table->dropIndex(['department']);
            $table->dropIndex(['graduation_year']);
            $table->dropIndex(['company']);
        });
    }
};
